Fix: an overlay that gets displayed when the menu drawer is opened  covers the whole page.

--- a/static/css/my-style.css
+++ b/static/css/my-style.css
@@ -109,3 +109,13 @@ body {
 .first-entry {
   background: inherit;
 }
+
+#overlay {
+  display: none;
+	background-color: rgba(0,0,0,0.4);
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
